tests/fail/fail_top_level_statement.kr
mostran("no function here");

fn inisiu() {
    mostran("ola");
}
